--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -1,24 +1,29 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <div class="container">
+        <div class="form">
+            <h2 class="text-center">Login</h2>
 
-    <h2>Login</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            {% if message %}
+                <div>{{ message }}</div>
+            {% endif %}
+        
+            <form action="{% url 'login' %}" method="post">
+                {% csrf_token %}
+                <div class="form-label">
+                    <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-label">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <input class="btn btn-primary" type="submit" value="Login">
+                </div>
+            </form>
+        
+            Don't have an account? <a href="{% url 'register' %}">Register here.</a>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    </div>
 
 {% endblock %}
