--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,30 +1,37 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <div class="container">
+        <div class="form">
+            <h2 class="text-center">Register</h2>
 
-    <h2>Register</h2>
+            {% if message %}
+                <div>{{ message }}</div>
+            {% endif %}
+        
+            <form action="{% url 'register' %}" method="post">
+                {% csrf_token %}
+                <div class="form-label">
+                    <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-label">
+                    <input class="form-control" type="email" name="email" placeholder="Email Address">
+                </div>
+                <div class="form-label">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="form-label">
+                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <input class="btn btn-primary" type="submit" value="Register">
+                </div>
+            </form>
+        
+            Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        </div>
+    </div>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    
 
 {% endblock %}
