--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,6 +1,13 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <style>
+        .container {
+            border: none;
+            width: 25%;
+        }        
+    </style>
+
     <div class="container">
         <div class="form">
             <h2 class="text-center">Register</h2>
