--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -1,5 +1,11 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            new_post();
+            timeline("following");
+        });
+    </script>
     
 {% endblock %}
