--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -4,7 +4,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             new_post();
-            timeline();
+            timeline("timeline");
         });
     </script>
 
