Implemented follow/unfollow.

--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -14,7 +14,7 @@
     </style>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            follow();
+            following_switch();
         });
     </script>
     <div class="container">
@@ -25,11 +25,9 @@
             {% if profile_username == user %}
             <!-- No button -->
             {% else %}
-                {% if already_following %}
-                    <button class="btn btn-secondary" id="unfollow-btn">Unfollow</button>
-                {% else %}
-                    <button class="btn btn-primary" id="follow-btn">Follow</button>
-                {% endif %}
+                <div id="following-check" data-following="{{ already_following }}"></div>
+                <button class="btn btn-secondary" id="unfollow-btn" onclick="unfollow()">Unfollow</button>
+                <button class="btn btn-primary" id="follow-btn" onclick="follow()">Follow</button>
             {% endif %}
         </div>
         <hr>
@@ -51,5 +49,4 @@
             {% endfor%}
         </div>
     </div>
-    
 {% endblock %}
